[tool.poetry]
name = "graphene-test"
version = "0.1.0"
description = ""
authors = ["Gwen Frank"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
